--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <li>PT. All Safe Red Flag</li>
         <li>PT. E Corp</li>
       </ol>
+
+      <h2>Kemampuan</h2>
+      <ul>
+        <li>Meretas Hatimuu 🤪🤪🤪🤪</li>
+      </ul>
     </div>
   </body>
 </html>
